\name{NEWS}
\title{stan4bart News}
\encoding{UTF-8}
\section{CHANGES IN VERSION 0.0-3}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{extract} now accepts as a type \code{"trees"}, which
            allows for easier inspection of models fit with
            \code{bart_args = list("keepTrees" = TRUE)}.
    }
  }
}
\section{CHANGES IN VERSION 0.0-2}{
  \itemize{
    \item Initial public release.
  }
}
